<resources>
    <string name="app_name">Employee App</string>
    <string name="attribute_tab">Attributes</string>
    <string name="employees_tab">Employees</string>
    <string name="maps_tab">Maps</string>
    <string name="add_attribute_txt">ADD ATTRIBUTE</string>
    <string name="add_employee_txt">ADD EMPLOYEE</string>
    <string name="attribute_name">Attribute name</string>
    <string name="new_attribute_hint">Enter attribute name</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="create_btn">CREATE</string>
    <string name="delete_checkbox">YES</string>
    <string name="no_delete_checkbox">NO</string>
    <string name="delete_heading">Delete Attribute</string>
    <string name="save_edit">DONE</string>
    <string name="new_employee_name">Add employee name</string>
    <string name="new_employee_surname">Add employee surname</string>
    <string name="new_employee_date">Add employee date of birth</string>
    <string name="employee_day">Day</string>
    <string name="employee_month">Month</string>
    <string name="employee_year">Year</string>
    <string name="employee_car">Has car</string>
    <string name="employee_address">Address of the employee</string>
    <string name="attributes_available">Available attributes</string>
    <string name="search_employee">Search for employee</string>
    <string name="search_text">SEARCH</string>
    <string name="employees_available">Available employees</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>