<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddEmployeeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_employee_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_employee_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#707070"
            android:lineSpacingExtra="5sp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="31dp"/>

        <EditText
            android:inputType="text"
            android:id="@+id/add_employee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/add_employee_header"
            app:layout_constraintTop_toBottomOf="@id/add_employee_header"
            android:text="@string/new_employee_name"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#707070"
            android:lineSpacingExtra="5sp"
            android:layout_marginTop="13dp"/>

        <TextView
            android:id="@+id/add_employee_header_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_employee_surname"
            app:layout_constraintStart_toStartOf="@id/add_employee_header"
            app:layout_constraintTop_toBottomOf="@id/add_employee_name"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#707070"
            android:lineSpacingExtra="5sp"
            android:layout_marginTop="40dp"/>

        <EditText
            android:inputType="text"
            android:id="@+id/add_employee_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/add_employee_header"
            app:layout_constraintTop_toBottomOf="@id/add_employee_header_surname"
            android:text="@string/new_employee_surname"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#707070"
            android:lineSpacingExtra="5sp"
            android:layout_marginTop="13dp"/>


        <TextView
            android:id="@+id/add_employee_dob_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_employee_date"
            app:layout_constraintTop_toBottomOf="@id/add_employee_surname"
            app:layout_constraintStart_toStartOf="@id/add_employee_header"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#707070"
            android:lineSpacingExtra="5sp"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/day_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_day"
            app:layout_constraintStart_toStartOf="@id/add_employee_header"
            app:layout_constraintTop_toBottomOf="@id/add_employee_dob_header"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#707070"
            android:lineSpacingExtra="5sp"
            android:layout_marginTop="13dp"/>

        <NumberPicker
            android:id="@+id/employee_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/add_employee_header"
            app:layout_constraintTop_toBottomOf="@id/day_header"/>

        <TextView
            android:id="@+id/month_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_month"
            app:layout_constraintStart_toEndOf="@id/employee_day"
            app:layout_constraintBottom_toBottomOf="@id/day_header"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#707070"
            android:lineSpacingExtra="5sp"
            android:layout_marginStart="12dp"/>

        <NumberPicker
            android:id="@+id/employee_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/employee_day"
            app:layout_constraintStart_toStartOf="@id/month_header" />

        <TextView
            android:id="@+id/year_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_year"
            app:layout_constraintStart_toEndOf="@id/employee_month"
            app:layout_constraintTop_toTopOf="@id/day_header"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#707070"
            android:lineSpacingExtra="5sp"
            android:layout_marginStart="12dp"/>

        <NumberPicker
            android:id="@+id/employee_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/year_header"
            app:layout_constraintTop_toTopOf="@id/employee_day"/>

        <TextView
            android:id="@+id/car_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_car"
            app:layout_constraintStart_toStartOf="@id/add_employee_header"
            app:layout_constraintTop_toBottomOf="@id/employee_day"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#707070"
            android:lineSpacingExtra="5sp"
            android:layout_marginTop="40dp"/>
        <CheckBox
            android:id="@+id/has_car_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_checkbox"
            app:layout_constraintStart_toStartOf="@id/car_header"
            app:layout_constraintTop_toBottomOf="@id/car_header"
            android:layout_marginTop="13dp"/>
        <CheckBox
            android:id="@+id/has_car_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/has_car_yes"
            android:text="@string/no_delete_checkbox"
            app:layout_constraintStart_toEndOf="@id/has_car_yes"/>

        <TextView
            android:id="@+id/address_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_address"
            app:layout_constraintStart_toStartOf="@id/add_employee_header"
            app:layout_constraintTop_toBottomOf="@id/has_car_yes"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#707070"
            android:lineSpacingExtra="5sp"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/address_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_address"
            app:layout_constraintStart_toStartOf="@id/car_header"
            app:layout_constraintTop_toBottomOf="@id/address_header"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#707070"
            android:lineSpacingExtra="5sp"
            android:layout_marginTop="13dp"/>

        <TextView
            android:id="@+id/attributes_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attributes_available"
            app:layout_constraintStart_toStartOf="@id/add_employee_header"
            app:layout_constraintTop_toBottomOf="@id/address_add"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#707070"
            android:lineSpacingExtra="5sp"
            android:layout_marginTop="40dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/attributes_list_employee"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/attributes_available"
            app:layout_constraintStart_toStartOf="@id/attributes_available"
            tools:listitem="@layout/single_attribute_listv2"
            android:layout_marginTop="13dp"/>

        <TextView
            android:id="@+id/cancel_employee_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn"
            app:layout_constraintStart_toStartOf="@id/add_employee_header"
            app:layout_constraintTop_toBottomOf="@id/attributes_list_employee"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#707070"
            android:lineSpacingExtra="5sp"/>

        <TextView
            android:id="@+id/confirm_employee_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_btn"
            app:layout_constraintBottom_toBottomOf="@id/cancel_employee_add"
            app:layout_constraintStart_toEndOf="@id/cancel_employee_add"
            android:layout_marginStart="18dp"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="#1e3d65"
            android:lineSpacingExtra="5sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>