<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddAttributeFragment">

    <TextView
        android:id="@+id/new_attribute_title_fr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#707070"
        android:lineSpacingExtra="5sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/attribute_name"/>

    <EditText
        android:id="@+id/enter_attribute_name_fr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/new_attribute_hint"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#707070"
        android:lineSpacingExtra="5sp"
        app:layout_constraintTop_toBottomOf="@id/new_attribute_title_fr"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="@id/new_attribute_title_fr"/>

    <TextView
        android:id="@+id/cancel_button_fr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/cancel_btn"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#707070"
        android:lineSpacingExtra="5sp"
        app:layout_constraintStart_toStartOf="@id/new_attribute_title_fr"
        app:layout_constraintTop_toBottomOf="@id/enter_attribute_name_fr"
        android:layout_marginTop="49dp"/>

    <TextView
        android:id="@+id/create_button_fr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/create_btn"
        android:textSize="16sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:textColor="#1e3d65"
        android:lineSpacingExtra="5sp"
        app:layout_constraintStart_toEndOf="@id/cancel_button_fr"
        android:layout_marginStart="18dp"
        app:layout_constraintBottom_toBottomOf="@id/cancel_button_fr"
        android:layout_marginTop="49dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>